# python-deep-learning-frameworks

./: LICENSE  README.md  pyproject.toml  repositories.csv  requirements.txt
.github/workflows/: update_readme.yml
notebooks/: development_over_time.ipynb
python_deep_learning_frameworks/: .update.py.swp  list.txt  models.py  template.md.j2  update.py
